[package]
name = "superdev-fellow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  { version = "0.8.4", features = ["macros"] }
axum-macros = "0.5.0"
base64 = "0.22.1"
bs58 = "0.5.1"
hyper = {version="1.6.0",features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
solana-sdk = "2.3.1"
spl-token = "8.0.0"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
tower-http ={version= "0.6.6", features=["cors"]}
tracing-subscriber = "0.3"
